Use Math.clamp() in ModuleIOSimWPI for WPILib 2027 compatibility
MathUtil.clamp() was removed in WPILib 2027 (PR #8186). Replace the
nested Math.max/min workaround with Java 21's Math.clamp(), which is
the upstream-approved replacement.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>